objects/ProfileMapping__c.object
<CustomObject>
    <description>Object Used to map ATT CinglePoint Profiles  to Salesforce Profiles This will facilitate the translation for different tracks that require their own profiles to be converted into Salesforce Profiles. It can be used to facilitate the movement and translation between when deploy from  lower and upper environments.</description>
    <fields>
        <fullName>ExternalProfile__c</fullName>
        <description>ATT Profile</description>
        <externalId>true</externalId>
        <label>External Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicGroupId__c</fullName>
        <description>Public Group associated to the Profile</description>
        <label>Public Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicGroupName__c</fullName>
        <description>Public Group associated to the Profile</description>
        <label>Public Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceProfileId__c</fullName>
        <description>Salesforce Profile Id</description>
        <label>Salesforce Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceProfileName__c</fullName>
        <description>Salesforce Profile Description</description>
        <label>Salesforce Profile Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserNameSufix__c</fullName>
        <description>User Name Sufix used to create the user Name based on the Environment type DEV/QA/UAT. For PROD must be empty</description>
        <label>User Name Sufix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Profile Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExternalProfile__c</columns>
        <columns>SalesforceProfileName__c</columns>
        <columns>SalesforceProfileId__c</columns>
        <columns>UserNameSufix__c</columns>
        <columns>PublicGroupId__c</columns>
        <columns>PublicGroupName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>ExternalProfile__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>SalesforceProfileId__c</columns>
        <columns>SalesforceProfileName__c</columns>
        <columns>UserNameSufix__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Profile Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profile Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>